Gtk-3.20&3.22&4.0: [Budgie-desktop] Fix side-effect of the previous commit
Reducing top-margin caused unwanted truncation in button node area,
so protect specific .raven-header for "AppletSettings"...

--- a/gtk/sass/4.0/_3rd-party.scss
+++ b/gtk/sass/4.0/_3rd-party.scss
@@ -464,6 +464,11 @@ $budgie_transition: opacity 0.2s $slope_medium,
     }
   }
 
+  > stack > box.vertical > stack > stack > box.vertical > .raven-header {
+    // revert to original top-margin for 'AppletSettings'
+    margin-top: 0;
+  }
+
   .raven-background {
     border-width: 1px 0 0;
     border-style: solid none none;
